--- a/requirements.txt
+++ b/requirements.txt
@@ -64,3 +64,11 @@ urllib3==2.0.4
 wandb==0.15.7
 xxhash==3.3.0
 yarl==1.9.2
+
+gym~=0.26.2
+openai~=0.27.8
+nltk~=3.8.1
+scikit-learn~=1.3.0
+matplotlib~=3.7.2
+scipy~=1.11.1
+torchsummary~=1.5.1
