--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,43 @@
+accelerate==0.22.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 appdirs==1.4.4
 async-timeout==4.0.2
 attrs==23.1.0
+bitsandbytes==0.41.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
+cloudpickle==2.2.1
 cmake==3.27.0
+contourpy==1.1.0
+cycler==0.11.0
 datasets==2.14.1
 dill==0.3.7
 docker-pycreds==0.4.0
 filelock==3.12.2
+fonttools==4.42.0
 frozenlist==1.4.0
 fsspec==2023.6.0
 gitdb==4.0.10
 GitPython==3.1.32
+gym==0.26.2
+gym-notices==0.0.8
 huggingface-hub==0.16.4
 idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
 Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.4
 lit==16.0.6
 MarkupSafe==2.1.3
+matplotlib==3.7.2
 mpmath==1.3.0
 multidict==6.0.4
 multiprocess==0.70.15
 networkx==3.1
+nltk==3.8.1
 numpy==1.25.1
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
@@ -36,25 +50,33 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
+openai==0.27.8
 packaging==23.1
 pandas==2.0.3
 pathtools==0.1.2
+Pillow==10.0.0
 protobuf==4.23.4
 psutil==5.9.5
 pyarrow==12.0.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.1
 regex==2023.6.3
 requests==2.31.0
 safetensors==0.3.1
+scikit-learn==1.3.0
+scipy==1.11.1
 sentry-sdk==1.28.1
 setproctitle==1.3.2
 six==1.16.0
 smmap==5.0.0
 sympy==1.12
+termcolor==2.3.0
+threadpoolctl==3.2.0
 tokenizers==0.13.3
 torch==2.0.1
+torchsummary==1.5.1
 tqdm==4.65.0
 transformers==4.31.0
 triton==2.0.0
@@ -64,11 +86,4 @@ urllib3==2.0.4
 wandb==0.15.7
 xxhash==3.3.0
 yarl==1.9.2
-
-gym~=0.26.2
-openai~=0.27.8
-nltk~=3.8.1
-scikit-learn~=1.3.0
-matplotlib~=3.7.2
-scipy~=1.11.1
-torchsummary~=1.5.1
+zipp==3.16.2
